reliable auto-suspend

--- a/example/index.html
+++ b/example/index.html
@@ -1,8 +1,12 @@
 <!doctype html5>
+<style>
+  input, button {
+    font-size: 70px;
+  }
+</style>
 <body>
-  <button>start</button>
   <form>
-    <input type="text" name="text">
+    <input type="text" name="text" value="hack the planet">
     <input type="submit" value="send">
   </form>
   <script src="bundle.js"></script>
